syntax = "proto3";

import "google/protobuf/empty.proto";

package secret;

option csharp_namespace = "SecretServer";

service SecretService {
  rpc GetSecret(google.protobuf.Empty)
      returns (Secret);
}

message Secret {
  bytes secret_value = 1;
}
